--- a/src/view/GoL.fxml
+++ b/src/view/GoL.fxml
@@ -33,7 +33,7 @@
         <Canvas fx:id="gridcanvas" height="535.0" width="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
         <ButtonBar layoutX="50.0" layoutY="127.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <buttons>
-                <Button fx:id="testbutton" mnemonicParsing="false" onMouseClicked="#handleSubmitButtonAction" text="Start/Stop" />
+                <Button fx:id="testbutton" mnemonicParsing="false" onAction="#handleToggleStartButton" onMouseClicked="#handleSubmitButtonAction" text="Start/Stop" />
                 <Button mnemonicParsing="false" text="Reset" />
                 <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" onAction="#handleStepButton" text="Next Generation" />
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Speed:" />
