--- a/src/view/GoL.fxml
+++ b/src/view/GoL.fxml
@@ -37,7 +37,7 @@
                 <Button fx:id="ResetButton" mnemonicParsing="false" onAction="#handleResetButton" text="Reset" />
                 <Button fx:id="NextGenButton" layoutX="535.0" layoutY="18.0" mnemonicParsing="false" onAction="#handleStepButton" text="Next Generation" />
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Speed:" />
-                <Slider fx:id="SpeedSlider" />
+                <Slider fx:id="SpeedSlider" blockIncrement="50.0" majorTickUnit="250.0" max="500.0" min="30.0" minorTickCount="25" onMouseReleased="#handleSpeedSlider" snapToTicks="true" value="30.0" />
                 <Text layoutX="291.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zoom:" />
                 <Slider fx:id="ZoomSlider" layoutX="403.0" layoutY="23.0" />
                 <Text layoutX="447.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generation:" />
